crates/ddlog-syntax/tests/validation/fail/output_function.dl
// kind:item validate:true pass:false ignore:false
extern output function foo() {}
